# LLM-portfolio-project

./: .env.example  .gitattributes  .gitignore  =0.24.0  AGENTS.md  CHANGES_SUMMARY.md  CHART_ENHANCEMENTS.md  CLAUDE.md  CODEBASE_ANALYSIS_REPORT.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PACKAGE_MODERNIZATION.md  PRE_PUSH_CHECKLIST.md  README.md  REPOSITORY_CLEANUP_COMPLETE.md  bootstrap.py  check_twitter_api.py  constraints.txt  docker-compose.argilla.yml  ecosystem.config.js  generate_journal.py  migrate_with_cleaning.py  pyproject.toml  refresh_local_schema.py  requirements-dev.txt  requirements.txt  setup.py  template.yaml  test_all_apis.py  test_integration.py  tmp_schema.json  tmp_schema2.json  tmp_schema3.json  validate_deployment.py
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/agents/: AGENT_MD_FORMAT_GUIDE.md  context7.agent.md  docs-agent.agent.md  planner.agent.md  portfolio-assistant.agent.md  power-bi-data-modeling-expert.agent.md  power-bi-performance-expert.agent.md  power-bi-visualization-expert.agent.md  repo-audit.agent.md  se-ux-ui-designer.agent.md
.github/workflows/: ci.yml  codeql.yml  (+3 more)
app/: auth.py  main.py  track_record.py
archive/: fix_critical_issues.py
docker/: discord-bot.service
docs/: AI_ADVISOR_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  BACKEND_CODE_WALKTHROUGH.md  BOOTSTRAP_FIX_REPORT.md  CHUNK_INDEXING_FIX.md  CI_SCHEMA_VALIDATION.md  CODEBASE_COMPREHENSIVE_REPORT.md  CODEBASE_MAP.md  CODING_AGENT_GUIDE.md  DEV_SETUP.md  DISCORD_ARCHITECTURE.md  DOCUMENTATION_STATUS.md  EC2_DEPLOYMENT.md  EC2_DEPLOYMENT_FULL.md  EC2_JOURNALD_MIGRATION.md  EC2_README.md  EC2_SETUP_QUICK_REFERENCE.md  EXPECTED_SCHEMAS.md  FULL_CODEBASE_AUDIT.md  LEGACY_MIGRATIONS.md  LLM_MODELS.md  QUICK_START.md  README.md  SCHEMA_REPORT.md  SNAPTRADE_MIGRATION_COMPLETE.md  STARTUP_GUIDE.md  api-reference.md  backend-code-walkthrough.md  ci-schema-validation.md  ec2-deployment.md  legacy-migrations.md  quick-start.md  recon_checklist.md  repository-overview.md  robinhood_metric_map.md  schema-report.md
nginx/: api.conf
notebooks/: 01_generate_journal.ipynb  02_clean_discord.ipynb
reports/: EXPORT_SUMMARY.md  README.md  keys_catalog.md  live_schema_dump.sql  ruff_analysis.txt  vulture_analysis.txt
schema/: 000_baseline.sql  020_drop_positions_redundant_columns.sql  030_discord_message_chunks.sql  031_stock_mentions.sql  033_stock_mentions_v2.sql  037_gold_label_columns.sql  040_create_discord_parsed_ideas.sql  041_fix_parsed_ideas_message_id_type.sql  043_add_parsed_ideas_foreign_key.sql  044_drop_duplicate_indexes.sql  045_consolidate_rls_policies.sql  050_ohlcv_daily.sql  054_drop_chart_metadata.sql  055_stock_profiles.sql  058_security_and_indexes.sql  059_activities_table.sql  060_baseline_current.sql  061_cleanup_migration_ledger.sql  062_stock_notes.sql  063_discord_ingestion.sql  064_user_ideas.sql  065_account_balances_pk.sql  066_accounts_connection_status.sql  067_analysis_cache.sql  068_position_snapshots.sql  069_account_buckets.sql  070_risk_cache_bucket.sql  071_analysis_cache_bucket.sql  072_stock_thesis_profiles.sql  073_source_credibility.sql  074_video_quotes.sql  075_content_sources_auth_and_tiers.sql  076_security_and_cleanup.sql  077_discord_content_capture_and_reconcile.sql  078_drop_twitter_data.sql  079_drop_notes_and_topic_tags.sql
scripts/: audit_ec2.sh  audit_repo.py  backfill_activities.py  backfill_ohlcv.py  backfill_stock_profiles.py  backfill_tweet_text.py  bootstrap.py  bootstrap.sh  check_ohlcv.py  check_secrets.py  check_system_status.py  ci_schema_validation.py  daily_pipeline.py  daily_stock_refresh.py  deploy_database.py  deploy_ec2.sh  deploy_lambdas.py  deploy_schema.ps1  deploy_schema.sh  doctor_ec2.sh  ec2_user_data.sh  env_doctor.py  fetch_discord_history_improved.py  fix_orphaned_accounts.py  generate_journal.py  import_imazing_messages.py  ingest_discord.py  init_database.py  init_twitter_schema.py  investigate_symbol.py  migrate_sqlite.py  nightly_pipeline.py  preflight_ec2.sh  regenerate_schemas.py  run_arb_site.py  run_migration.ps1  run_pipeline_with_secrets.sh  run_timestamp_migration.py  schema_parser.py  setup_ec2_services.sh  (+13 more)
src/: __init__.py  aws_secrets.py  bucket.py  channel_processor.py  chart_enhancements.py  config.py  content_import.py  data_collector.py  database.py  databento_collector.py  db.py  discord_data_manager.py  discord_ingest.py  discord_logger_bot.py  env_bootstrap.py  expected_schemas.py  generated_schemas.py  journal_generator.py  logging_utils.py  market_data.py  market_data_service.py  message_cleaner.py  openbb_service.py  portfolio.py  portfolio_returns.py  position_analysis.py  price_service.py  retry_utils.py  snaptrade_collector.py  supabase_writers.py  test.json  test2.json  trade_queries.py  trades.py  twitter_analysis.py  youtube.py
systemd/: README.md  api.service  discord-bot.service  nightly-pipeline.service  nightly-pipeline.timer
tests/: arb_cases.json  conftest.py  run_arb_tests.py  test_account_resolution.py  test_alias_mapping.py  test_analysis_consensus.py  test_analysis_credibility_passthrough.py  test_analysis_fundamental.py  test_analysis_indicators.py  test_analysis_integration.py  test_analysis_models.py  test_analysis_orchestrator.py  test_analysis_risk.py  test_analysis_routes.py  test_analysis_sentiment.py  test_analysis_technical.py  test_analysis_valuation.py  test_channel_type_classifier.py  test_chunk_indexing.py  test_content_import.py  test_content_sources_auth.py  test_core_functions.py  test_credibility_api.py  test_credibility_resolver.py  test_crypto_price_series.py  test_curation_preservation.py  test_databento_collector.py  test_debug_route.py  test_discord_ingest.py  test_dividend_detection.py  test_drip_detection.py  test_helpers.py  test_idea_author_threading.py  test_ideas_refine_reflection.py  test_ideas_route.py  test_integration.py  test_market_data_service.py  test_message_id_string.py  test_nlp_batch.py  test_openai_parser.py  (+35 more)
(+179 files in other folders)
