[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-portfolio-journal"
version = "1.0.0"
description = "A data-driven portfolio journal using LLMs to generate trading summaries from market data and social sentiment"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LLM Portfolio Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/qmyhd/LLM-portfolio-project"
Repository = "https://github.com/qmyhd/LLM-portfolio-project"
Issues = "https://github.com/qmyhd/LLM-portfolio-project/issues"

[project.scripts]
generate-journal = "src.journal_generator:main"
portfolio-bot = "src.bot.bot:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pylance]
# Ignore certain warnings for third-party libraries with dynamic imports
reportPrivateImportUsage = "none"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

[tool.pyright]
# Python version
pythonVersion = "3.11"
pythonPlatform = "All"

# Include and exclude patterns
include = ["src", "tests", "notebooks"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "data"
]

# Type checking mode (basic, standard, strict)
typeCheckingMode = "basic"

# Specific warning suppressions
reportPrivateImportUsage = "none"
reportMissingImports = "warning" 
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportGeneralTypeIssues = "warning"

# Suppress warnings for specific libraries
[tool.pyright.defineConstant]
PYLANCE_IGNORE_GOOGLE_AI = true
PYLANCE_IGNORE_TWEEPY = true

# ============================================
# Ruff Configuration (Fast Python Linter)
# ============================================
[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "data",
    "batch_output",
    "charts",
    "tmp",
    "*.ipynb",
]

[tool.ruff.lint]
# Enable rules for common issues
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file
    "F401",   # unused import (sometimes intentional for re-exports)
    "B008",   # do not perform function calls in argument defaults
    "W291",   # trailing whitespace (handled by formatter)
    "W293",   # whitespace before punctuation (handled by formatter)
    "C401",   # unnecessary generator — use set comprehension (style preference)
    "C408",   # unnecessary dict call — use literal (style preference)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*.py" = ["B011", "UP006", "UP007", "UP015", "UP017", "UP035", "UP038", "UP045", "I001"]
# Defer cosmetic pyupgrade / isort cleanup in src/ to a dedicated "ruff cleanup" PR
"src/**/*.py" = ["UP006", "UP007", "UP015", "UP017", "UP035", "UP038", "UP045", "I001"]

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:All support for the `google.generativeai` package has ended:FutureWarning",
]
markers = [
    "anyio: marks async tests to run via anyio (registered by anyio pytest plugin)",
    "openai: marks tests that require OpenAI API (deselect with '-m \"not openai\"')",
    "slow: marks tests as slow running (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that may require external services",
]

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "**/__pycache__/*",
    ".venv/*",
]
branch = true

[tool.coverage.report]
# Threshold lowered: most uncovered code is bot commands/integrations requiring external services
fail_under = 20
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
